# I2A2-Projeto_final

./: .gitignore  LICENSE  README.md
Projeto Final - Artefatos/: .env.example  main.py  pyproject.toml
Projeto Final - Artefatos/apresentacao/: Extrator_Documentos_Fiscais_IAgentes.pptx
