[project]
name = "projeto-final-artefatos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.3",
    "langchain-core>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "numpy>=2.3.4",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "plotly>=6.3.1",
    "pydantic>=2.12.3",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "st-file-uploader>=0.2.2",
    "streamlit>=1.51.0",
]
